[workspace]
resolver = "2"

members = [
    "third_party/move/evm/exec-utils",
    "third_party/move/evm/extract-ethereum-abi",
    "third_party/move/extensions/async/move-async-vm",
    "third_party/move/extensions/move-table-extension",
    "third_party/move/move-binary-format",
    "third_party/move/move-binary-format/serializer-tests",
    "third_party/move/move-borrow-graph",
    "third_party/move/move-bytecode-verifier",
    "third_party/move/move-bytecode-verifier/bytecode-verifier-tests",
    "third_party/move/move-bytecode-verifier/fuzz",
    "third_party/move/move-bytecode-verifier/invalid-mutations",
    "third_party/move/move-bytecode-verifier/transactional-tests",
    "third_party/move/move-command-line-common",
    "third_party/move/move-compiler",
    "third_party/move/move-compiler-v2",
    "third_party/move/move-compiler-v2/tools/testdiff",
    "third_party/move/move-compiler-v2/transactional-tests",
    "third_party/move/move-compiler/transactional-tests",
    "third_party/move/move-core/types",
    "third_party/move/move-examples",
    "third_party/move/move-ir-compiler",
    "third_party/move/move-ir-compiler/move-bytecode-source-map",
    "third_party/move/move-ir-compiler/move-ir-to-bytecode",
    "third_party/move/move-ir-compiler/move-ir-to-bytecode/syntax",
    "third_party/move/move-ir-compiler/transactional-tests",
    "third_party/move/move-ir/types",
    "third_party/move/move-model",
    "third_party/move/move-model/bytecode",
    "third_party/move/move-model/bytecode-test-utils",
    "third_party/move/move-prover",
    "third_party/move/move-prover/boogie-backend",
    "third_party/move/move-prover/bytecode-pipeline",
    "third_party/move/move-prover/lab",
    "third_party/move/move-prover/move-abigen",
    "third_party/move/move-prover/move-docgen",
    "third_party/move/move-prover/move-errmapgen",
    "third_party/move/move-prover/test-utils",
    "third_party/move/move-symbol-pool",
    "third_party/move/move-vm/integration-tests",
    "third_party/move/move-vm/paranoid-tests",
    "third_party/move/move-vm/runtime",
    "third_party/move/move-vm/test-utils",
    "third_party/move/move-vm/transactional-tests",
    "third_party/move/move-vm/types",
    "third_party/move/testing-infra/module-generation",
    "third_party/move/testing-infra/test-generation",
    "third_party/move/testing-infra/transactional-test-runner",
    "third_party/move/tools/move-bytecode-utils",
    "third_party/move/tools/move-bytecode-viewer",
    "third_party/move/tools/move-cli",
    "third_party/move/tools/move-coverage",
    "third_party/move/tools/move-disassembler",
    "third_party/move/tools/move-explain",
    "third_party/move/tools/move-package",
    "third_party/move/tools/move-resource-viewer",
    "third_party/move/tools/move-unit-test",
]

[workspace.dependencies]
aes-gcm = "0.10.3"
atty = "0.2.14"
anyhow = "1.0.71"
arbitrary = { version = "1.3.2", features = ["derive"] }
async-trait = "0.1.53"
backtrace = "0.3.58"
bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }
better_any = "0.1.1"
bitvec = "1.0.1"
byteorder = "1.4.3"
bytes = { version = "1.4.0", features = ["serde"] }
chrono = { version = "0.4.19", features = ["clock", "serde"] }
claims = "0.7"
clap = { version = "4.3.9", features = ["derive", "env", "unstable-styles"] }
codespan = "0.11.1"
codespan-reporting = "0.11.1"
colored = "2.0.0"
criterion = "0.3.5"
crossbeam-channel = "0.5.4"
crossterm = "0.26.1"
curve25519-dalek = "3"
datatest-stable = "0.1.1"
derivative = "2.2.0"
difference = "2.0.0"
digest = "0.9.0"
dir-diff = "0.3.2"
dirs-next = "2.0.0"
ed25519-dalek = { version = "1.0.1", features = ["std", "serde"] }
ethabi = "18.0.0"
ethnum = "1.5.0"
evm = { version = "0.33.1", features = ["tracing"] }
evm-runtime = { version = "0.33.0", features = ["tracing"] }
fail = "0.5.0"
file_diff = "1.0.0"
flexi_logger = "0.27.4"
futures = "0.3.29"
getrandom = "0.2.2"
hashbrown = "0.14.3"
heck = "0.4.1"
hex = { version = "0.4.3", features = ["serde"] }
hex-literal = "0.3.4"
hkdf = "0.10.0"
httpmock = "0.6.8"
indexmap = "1.9.3"
internment = { version = "0.5.0", features = ["arc"] }
itertools = "0.12"
lazy_static = "1.4.0"
libfuzzer-sys = "0.4.6"
log = "0.4.17"
lru = "0.7.5"
maplit = "1.0.2"
memory-stats = "1.0.0"
mirai-annotations = "1.12.0"
named-lock = "0.2.0"
num = "0.4.0"
num-bigint = { version = "0.3.2", features = ["rand"] }
num_cpus = "1.13.1"
num-traits = "0.2.15"
once_cell = "1.10.0"
ouroboros = "0.15.6"
prettydiff = "0.6.2"
primitive-types = { version = "0.10" }
parking_lot = "0.12.0"
paste = "1.0.7"
petgraph = "0.5.1"
plotters = { version = "0.3.5", default-features = false }
pretty = "0.10.0"
proc-macro2 = "1.0.38"
proptest = "1.4.0"
proptest-derive = "0.4.0"
quote = "1.0.18"
rand = "0.7.3"
rayon = "1.5.2"
ref-cast = "1.0.6"
regex = "1.9.3"
reqwest = { version = "0.11.11", features = [
    "blocking",
    "cookies",
    "json",
    "stream",
] }
sha2 = "0.9.3"
sha3 = "0.9.1"
shell-words = "1.0.0"
serde = { version = "1.0.193", features = ["derive", "rc"] }
serde_bytes = "0.11.6"
serde_json = { version = "1.0.81", features = [
    "preserve_order",
    "arbitrary_precision",
] } # Note: arbitrary_precision is required to parse u256 in JSON
serde-name = "0.1.1"
serde-reflection = { git = "https://github.com/aptos-labs/serde-reflection", rev = "73b6bbf748334b71ff6d7d09d06a29e3062ca075" }
serde_yaml = "0.8.24"
simplelog = "0.9.0"
smallbitvec = "2.5.1"
smallvec = "1.8.0"
static_assertions = "1.1.0"
syn = { version = "1.0.92", features = ["derive", "extra-traits"] }
tempfile = "3.3.0"
tera = "1.16.0"
termcolor = "1.1.2"
thiserror = "1.0.37"
tiny-keccak = { version = "2.0.2", features = ["keccak", "sha3"] }
toml_edit = "0.14.3"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["json", "env-filter"] }
tokio = { version = "1.35.1", features = ["full"] }
toml = "0.7.4"
triomphe = "0.1.9"
tui = "0.19.0"
typed-arena = "2.0.2"
uint = "0.9.4"
variant_count = "1.1.0"
walkdir = "2.3.3"
whoami = "1.5.0"
x25519-dalek = "1.2.0"
z3tracer = "0.8.0"

